# kate

./: .gitignore
addons/project/: CMakeLists.txt  kateprojectplugin.cpp  kateprojectplugin.h  kateprojectpluginview.cpp
addons/project/lsp/languageclient/: client.cpp  client.h  languageclientinterface.cpp  languageclientinterface.h  languageclientmanager.cpp  languageclientmanager.h
kate/: kateviewspace.cpp
